--- a/index.ipynb
+++ b/index.ipynb
@@ -190,7 +190,7 @@
    "outputs": [],
    "source": [
     "def output_at(list_of_terms, x_value):\n",
-    "    output_at = list(map(lambda output_at: term_output(list_of_terms, x_value), list_of_terms)) \n",
+    "    output_at = list(map(lambda output_at: term_output(list_of_terms[0][0], x_value), list_of_terms)) \n",
     "    return sum(output_at) "
    ]
   },
