--- a/index.ipynb
+++ b/index.ipynb
@@ -185,12 +185,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-83-f2ab02d3f97f>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-83-f2ab02d3f97f>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    output_at = list(map(lambda output_at: term_output(tuple(list_of_terms), x_value), list_of_terms)) + list(map(lambda output_at: term_output((tuple)list_of_terms, x_value), list_of_terms))\u001b[0m\n\u001b[0m                                                                                                                                                                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def output_at(list_of_terms, x_value):\n",
-    "    output_at = list(map(lambda output_at: term_output(list_of_terms[0], x_value), list_of_terms)) + list(map(lambda output_at: term_output(list_of_terms[1], x_value), list_of_terms)) \n",
+    "    output_at = list(map(lambda output_at: term_output(tuple(list_of_terms[0], x_value), list_of_terms)) + list(map(lambda output_at: term_output(list_of_terms[1], x_value), list_of_terms)) \n",
     "    return output_at"
    ]
   },
