--- a/index.ipynb
+++ b/index.ipynb
@@ -199,7 +199,7 @@
    ],
    "source": [
     "def output_at(list_of_terms, x_value):\n",
-    "    output_at = list(map(lambda output_at: term_output(tuple(list_of_terms[0], x_value), list_of_terms)) + list(map(lambda output_at: term_output(list_of_terms[1], x_value), list_of_terms)) \n",
+    "    output_at = list(map(lambda output_at: term_output([list_of_terms[0][0], list_of_terms[0][1]], x_value), list_of_terms)) + list(map(lambda output_at: term_output(list_of_terms[], x_value), list_of_terms)) \n",
     "    return output_at"
    ]
   },
