--- a/index.ipynb
+++ b/index.ipynb
@@ -185,27 +185,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-83-f2ab02d3f97f>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-83-f2ab02d3f97f>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    output_at = list(map(lambda output_at: term_output(tuple(list_of_terms), x_value), list_of_terms)) + list(map(lambda output_at: term_output((tuple)list_of_terms, x_value), list_of_terms))\u001b[0m\n\u001b[0m                                                                                                                                                                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def output_at(list_of_terms, x_value):\n",
-    "    output_at = list(map(lambda output_at: term_output([list_of_terms[0][0], list_of_terms[0][1]], x_value), list_of_terms)) + list(map(lambda output_at: term_output(list_of_terms[], x_value), list_of_terms)) \n",
+    "    output_at = list(map(lambda output_at: term_output([list_of_terms[0][0], list_of_terms[0][1]], x_value), list_of_terms)) + list(map(lambda output_at: term_output([list_of_terms[1][0], list_of_terms[1][1]] , x_value), list_of_terms)) \n",
     "    return output_at"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +205,7 @@
        "[27, 27, -11, -11]"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
