--- a/index.ipynb
+++ b/index.ipynb
@@ -185,27 +185,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
     "def output_at(list_of_terms, x_value):\n",
-    "    output_at = list(map(lambda output_at: term_output([list_of_terms[0][0], list_of_terms[][]], x_value), list_of_terms))  \n",
+    "    output_at = list(map(lambda output_at: term_output([list_of_terms[][0], list_of_terms[0][1]], x_value), list_of_terms))  \n",
     "    return output_at"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1.6935087808430286e-05, 1.6935087808430286e-05]"
+       "[27, 27]"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
