--- a/index.ipynb
+++ b/index.ipynb
@@ -185,27 +185,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
     "def output_at(list_of_terms, x_value):\n",
-    "    output_at = list(map(lambda output_at: term_output([list_of_terms[0][0], list_of_terms[0][1]], x_value), list_of_terms))  \n",
+    "    output_at = term_output([list_of_terms[0][0], list_of_terms[0][1]], x_value) + \n",
     "    return output_at"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[27, 27]"
+       "27"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
